--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,20 +1,26 @@
-project(muxer)
 cmake_minimum_required(VERSION 3.1)
 
+set(CMAKE_CXX_COMPILER "clang++")
 set(CMAKE_CXX_STANDARD 20)
+set(BOOST_MIN_VERSION 1.75)
 
-find_package(Boost COMPONENTS log log_setup REQUIRED)
+project(muxer)
 
-message(status "** Boost Include: ${Boost_INCLUDE_DIR}")
-message(status "** Boost Libraries: ${Boost_LIBRARY_DIRS}")
-message(status "** Boost Libraries: ${Boost_LIBRARIES}")
+find_package(Boost ${BOOST_MIN_VERSION} COMPONENTS log_setup log REQUIRED)
+find_package(Threads)
 
+message("** Boost Include: ${Boost_INCLUDE_DIR}")
+message("** Boost Libraries: ${Boost_LIBRARY_DIRS}")
+message("** Boost Libraries: ${Boost_LIBRARIES}")
+
+add_definitions(-DBOOST_LOG_DYN_LINK)
 include_directories(${Boost_INCLUDE_DIRS})
+link_libraries(${Boost_LIBRARIES} Threads::Threads)
+
+add_compile_options(-fPIC -stdlib=libc++)
+add_link_options(-stdlib=libc++)
 
 add_executable(muxer
-        main.cpp Session.h Session.cpp utils/utils.h utils/utils.cpp
-        muxers/HTTPMuxer.cpp muxers/Muxer.h utils/logger.h utils/logger.cpp)
-
-target_link_libraries(muxer ${Boost_LIBRARIES} pthread)
-
-set(CMAKE_CXX_FLAGS "-fPIC")
+        main.cpp Session.h Session.cpp
+        utils/utils.h utils/utils.cpp utils/logger.h utils/logger.cpp
+        muxers/HTTPMuxer.cpp muxers/Muxer.h)
